@@ -1,5 +1,12 @@
 2022-07-19  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-tab.y (declaration): Move annotation of function
+	names to trans1.
+	* libpoke/pkl-trans.c (pkl_trans1_pr_decl): Annotate declared
+	function names.
+
+2022-07-19  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-parser.h (struct pkl_parser): New field prev_loc.
 	* libpoke/pkl-parser.c (pkl_parser_init): Initialize
 	parser->prev_loc.
